--- a/src/org/john/bin/test.properties
+++ b/src/org/john/bin/test.properties
@@ -1,9 +1,12 @@
 pkgPrefix=org/john/bin
 #define input folders
+
 modelFolder=models
 tplFolder=tpls
 
-#define output folders
+packageSrc=main.java.
+targetPrefix=com/reponame/projname
+#define output src folders
 targetPath=src/main/java
 entityFolder=entity
 controllerFolder=controller
@@ -11,6 +14,7 @@ mapperFolder=mapper
 serviceFolder=service
 serviceImplFolder=service/impl
 
+#define output res folders
 targetMyBatisPath=src/main/resources
-targetMyBatisConfig=/
-targetMyBatisMapperFolder=/config
+myBatisConfigFolder=config
+myBatisMapperFolder=mapper
