add mybatis mapper parser

--- a/bin/org/john/bin/test.properties
+++ b/bin/org/john/bin/test.properties
@@ -5,6 +5,7 @@ modelFolder=models
 tplFolder=tpls
 
 packageSrc=main.java.
+packageRes=main.resources.
 targetPrefix=com/reponame/projname
 #define output src folders
 targetPath=src/main/java
