add fetch metadata feature

--- a/src/org/john/bin/setup.properties
+++ b/src/org/john/bin/setup.properties
@@ -42,3 +42,6 @@ myBatisConfigFolder=config
 
 #target mybatis mapper definition folder
 myBatisMapperFolder=mapper
+
+#define primary key type
+primaryKeyType=Integer
